Changes for 2.5.0

New features:
...G...... [ZBXNEXT-2320] added agent crash handling on Windows to log its stack trace (wiper)
..FG...... [ZBXNEXT-1078] added 'proc.mem[]' 5th parameter (memtype) on AIX, FreeBSD, Linux, Solaris; thanks to Johan Fischer and gescheit for agent patches for Linux and FreeBSD (Andris)
...G...... [ZBXNEXT-2006] added {#FSDRIVETYPE} macro to vfs.fs.discovery on Windows (asaveljevs)
.......PS. [ZBXNEXT-207] added a runtime control option to force execution of housekeeper (igors, wiper)
........S. [ZBXNEXT-1799] added support of low-level discovery macros in the "IPMI sensor" field (Sasha)
........S. [ZBXNEXT-2079] added support of low-level discovery macros in the "Units" field (Sasha)
...G...... [ZBXNEXT-689] added protocol option to net.dns and net.dns.query keys to enable tcp based queries (wiper)
...G...... [ZBXNEXT-2325] added CPU guest and guest priority metrics to system.cpu.util[] item, supported on Linux kernels starting from 2.6.24 and 2.6.33 respectively (Juris)

Bug fixes:
...G...... [ZBX-3437] fixed Windows agent to use the configured timeout option when estabilishing tcp connection (wiper)
..F....... [ZBX-4785] fixed errors when POST request with too many variables breaks functionality (Krists)
........S. [ZBX-8542] improved performance and reduced configuration cache locking when evaluating trigger expressions (wiper)
...G...PS. [ZBX-8470] fixed possible crash condition in agent, proxy and server daemons where a memory corruption might occur during module unloading (Juris)
..F....... [ZBX-8780] removed hover effect from readonly and disabled fields (arvids)
..F....... [ZBX-8844] fixed testing LDAP authentication (Krists)
..F.I..... [ZBX-8851] added "-1" and "0" as allowed values for "max_execution_time" and "max_input_time" PHP configuration settings (Krists)
A.F....... [ZBX-8720] fixed resolving of macros in graph names when graph name contains strings similar to macros (Krists)